assets/css/style.scss
@font-face {
  font-family: 'Publico';
  src: url('./fonts/publico/Publico-Roman.otf');
}

@font-face {
  font-family: 'Publico-Black';
  src: url('./fonts/publico/Publico-Black.otf');
}

@font-face {
  font-family: 'Boomer';
  src: url('./fonts/boomer/Boomer-Regular.otf');
  font-weight: 400;
}
@font-face {
  font-family: 'Boomer';
  src: url('./fonts/boomer/Boomer-Bold.otf');
  font-weight: 700;
  font-style: normal
}
@font-face {
  font-family: 'Boomer-Light';
  src: url('./fonts/boomer/Boomer-Light.otf');
  font-style: normal
}

$large-text-bold: 'Boomer';
$large-text: 'Boomer-Light';
$body-text: 'Boomer';
$bg-color: #222;
$text-black: #121212;
$gray-bg: #e7e7e7;

/********
Begin map
*********/
#jumbotron {
  width: 1200px;
  left: 50%;
  transform: translateX(-50%);
  position: relative;
}

#map, #loading {
  float: left;
  height: 800px;
  width: 800px;
}

#loading {
  font-family: 'Boomer';
  font-size: 3em;
  color: #CCCCCC;
  text-align: center;
  line-height: 800px;
}

.leaflet-interactive {
  z-index: 99999;
}

.main-map {
  border-left: 1px solid black;
}

/* Begin candidate table style */
#info {
  display: none;
  pointer-events: none;
  position: absolute;
  width: 300px;
  padding: 6px 8px;
  font: 14px/16px Arial, Helvetica, sans-serif;
  background: white;
  background: rgba(255,255,255,0.8);
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  border-radius: 5px;
  z-index: 999999;
}

.candidate-table {
  font-family: 'Boomer';
  width: 100%;
}

tbody {
  line-height: 1.8;
  display: table-row-group;
  vertical-align: middle;
}

tr.eln-row {
  display: table-row;
  font-family: 'Boomer';
  font-size: .8em;
  line-height: 30px;
}

tr.eln-row td {
  border-bottom: 1px solid #e2e2e2;
}

.eln-header {
  font-size: .7em;
  font-family: 'Boomer-Light';
  text-align: left;
  text-transform: uppercase;
  padding-bottom: 4px;
  border-bottom: 1px solid #e2e2e2;
  color: #999999;
}

.gop-party-tag, .dem-party-tag {
  width: 10px;
  height: 10px;
  display: inline-block;
}

.dem-party-tag {
  background-color: #00BFFF;
}

.gop-party-tag {
  background-color: #FE2E2E;
}

h4.candidate-table-title {
  font-size: 1.3em;
  text-align: left;
}

#participation {
  font-size: .7em;
  font-family: 'Boomer';
  color: grey;
  span {
    line-height: 20px;
  }
}

/* End candidate table style */

/* Begin title */

div#title-holder {
  margin: 20px;
  text-align: center;
  position: relative;
  width: 600px;
  left: 50%;
  transform: translateX(-50%);
}

h1#main-title {
  line-height: 1;
  font-family: 'Publico';
  font-size: 2.4em;
}

span#timestamp {
  font-family: 'Boomer';
  font-size: .9em;
  text-transform: uppercase;
}

/* End title */

/* Begin address search */
#search-bar {
  margin: 40px 0px;
}

label {
  font-family: 'Boomer';
}

#address-input {
  font-family: 'Boomer';
  box-shadow: inset 2px 3px 3px rgba(0,0,0,0.1);
  outline: none;
  width: 100%;
  padding-right: 10px;
  font-size: 14px;
  line-height: 15px;
  border-radius: 3px;
  border: 1px #e2e2e2 solid;
  box-sizing: border-box;
}

input {
  padding: 8px;
  font-size: .9em;
}
/* End address search */

/* Begin filter options */

#left {
  padding-right: 20px;
  float:left; 
  width: 300px;
}

.filter, .filter-selected{
  cursor: pointer;
  font-family: 'Boomer';
  padding: 5px;
  display: inline-block;
  text-align: center;
  width: 40%;
  img {
    width: 100%;
  }
}

.filter-title {
  padding: 2px 8px;
  font-size: .9em;
  border-radius: 3px;
  color: black;
}

.filter img {
  opacity: .5;
}

.filter:hover, .filter:focus{
  img {
    opacity: .7;
  }
  span.filter-title {
    background-color: #E2E2E2;
  }
}

.filter-selected {
  .filter-title {
    color: white;
    background-color: #444;
  }
  img {
    opacity: 1;
  }
}
/* End filter options */

/* Begin results summary */

#results-summary-title {
  font-size: 14px;
  font-family: 'Boomer';
}

